[gd_scene load_steps=3 format=3 uid="uid://bua4tr0ep7amc"]

[ext_resource type="Script" path="res://addons/lip_sync/lip_sync.gd" id="1_0bqux"]

[sub_resource type="AudioStreamMicrophone" id="AudioStreamMicrophone_3df2l"]

[node name="LipSync" type="MarginContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -157.0
offset_top = -119.5
offset_right = 157.0
offset_bottom = 119.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16
script = ExtResource("1_0bqux")

[node name="AudioStreamRecord" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamMicrophone_3df2l")
autoplay = true
mix_target = 2
bus = &"Record"

[node name="AudioStreamWav" type="AudioStreamPlayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "-"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Graph" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(256, 128)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Line2D" type="Line2D" parent="VBoxContainer/Graph"]
unique_name_in_owner = true
position = Vector2(0, 128)
width = 1.0

[node name="Fps" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Record" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
text = "Record from mic"

[node name="Play" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
text = "Play preset audio"

[node name="Stop" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
text = "Stop"

[connection signal="finished" from="AudioStreamWav" to="." method="_on_audio_stream_wav_finished"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Record" to="." method="_on_record_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Play" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Stop" to="." method="_on_stop_pressed"]
